2008-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el: Autoload `auth-source-user-or-password'.
	(nntp-send-authinfo): Use it.

	* nnimap.el: Autoload `auth-source-user-or-password'.
	(nnimap-open-connection): Use it.

	* auth-source.el: Added docs on using with url-auth.  Import gnus-util
	for the gnus-message function.
	(auth-source-user-or-password): Use it.

2008-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* rfc2104.el (rfc2104-hexstring-to-bitstring): Rename it back from
	rfc2104-hexstring-to-byte-list.  Return a unibyte string.
	(rfc2104-hash): Use it.

2008-05-08  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-toggle-truncate-lines):
	Don't use `iff' in docstring.

2008-05-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el: Adjusted copyright dates and added a keyword.

	* gnus-util.el (gnus-extract-address-component-name)
	(gnus-extract-address-component-email): Convenience functions around
	`gnus-extract-address-components'.

	* gnus-registry.el (gnus-registry-split-fancy-with-parent):
	Use `gnus-extract-address-component-email' to fix bug of comparing full
	sender name to `user-mail-address'.

2008-05-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-grep-in-list): Fix logic, use
	catch/throw to optimize.
	(gnus-registry-find-keywords): Just use member to find a keyword.

2008-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-srvr.el (gnus-enter-server-buffer): Make sure the server-buffer
	is current before calling gnus-server-prepare.
	(gnus-server-setup-buffer, gnus-server-update-server)
	(gnus-server-read-server, gnus-browse-exit): Use with-current-buffer.

2008-05-04  Juri Linkov  <juri@jurta.org>

	* mailcap.el (mailcap-replace-in-string): New compatibility alias.
	(mailcap-file-default-commands): Use mailcap-replace-in-string
	instead of replace-regexp-in-string, and mailcap-delete-duplicates
	instead of delete-dups.  Use [ \t\n]* for whitespace in regexp.
